--- a/GeneralCalculator/App.xaml
+++ b/GeneralCalculator/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="CalculatorDeliverables.App"
+﻿<Application x:Class="GeneralCalculator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CalculatorDeliverables"
+             xmlns:local="clr-namespace:GeneralCalculator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
     </Application.Resources>
 </Application>
