--- a/GeneralCalculator/MainWindow.xaml
+++ b/GeneralCalculator/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="CalculatorDeliverables.MainWindow"
+﻿<Window x:Class="GeneralCalculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CalculatorDeliverables"
+        xmlns:local="clr-namespace:GeneralCalculator"
         mc:Ignorable="d"
         Title="MainWindow" Height="655" Width="719" SizeToContent="WidthAndHeight" >
 
@@ -56,14 +56,7 @@
 
                 <Border BorderBrush="Blue" BorderThickness="2.55" Margin="177,105,159,0" Grid.ColumnSpan="3" Height="77" VerticalAlignment="Top">
                     <TextBlock x:Name="CalcDisplay" FontSize="26" Background="White" FontWeight="Light" Margin="0,0,1,0" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right" Width="573" Height="71" VerticalAlignment="Top">
-                <!--<TextBlock.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform ScaleY="-1"/>
-                        <SkewTransform/>
-                        <RotateTransform/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </TextBlock.RenderTransform>--></TextBlock>
+                </TextBlock>
                 </Border>
                 <Button Content="^" x:Name="buttonRoot_Copy" HorizontalAlignment="Left" Margin="27,339,0,0" VerticalAlignment="Top" Width="74" Height="20" Grid.Column="2" RenderTransformOrigin="0.495,0.517" Click="BtnOperators_On_Click" />
                 <Button Content="^-" x:Name="btnInverse" HorizontalAlignment="Left" Margin="385,339,0,0" VerticalAlignment="Top" Width="74" Height="20" Click="BtnOperators_On_Click" Grid.ColumnSpan="2" />
@@ -160,7 +153,6 @@
                         <Button Content="2" x:Name="convertBtn2" HorizontalAlignment="Left" Margin="107,77,0,0" VerticalAlignment="Top" Width="74" Height="20" Click="Convert_BtnNums_On_Click" />
                         <Button Content="3" x:Name="convertBtn3" HorizontalAlignment="Left" Margin="207,76,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="2.14,0.375" Height="20" Click="Convert_BtnNums_On_Click" />
                         <Button Content="0" x:Name="convertBtn0" HorizontalAlignment="Left" Margin="107,110,0,0" VerticalAlignment="Top" Width="74" Height="20" Click="Convert_BtnNums_On_Click" />
-                        <!--<Button Content="." x:Name="convertBtnDot" HorizontalAlignment="Left" Margin="208,110,0,0" VerticalAlignment="Top" Width="74" Height="20" Click="Convert_BtnNums_On_Click" />-->
                         <Button Content="+" x:Name="convertBtnPosSign" HorizontalAlignment="Left" Margin="301,108,0,0" VerticalAlignment="Top" Width="75" Height="20" Click="Convert_BtnNums_On_Click" />
                         <Button Content="-" x:Name="convertBtnNegSign" HorizontalAlignment="Left" Margin="397,108,0,0" VerticalAlignment="Top" Width="76" Height="20" Click="Convert_BtnNums_On_Click" />
                         <Button Content="&lt;-" x:Name="convertBtnBackspace" HorizontalAlignment="Left" Margin="10,110,0,0" VerticalAlignment="Top" Width="74" Height="20" Click="Convert_BtnNums_On_Click" />
